--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -195,6 +195,7 @@ body {
 }
 .films__row {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   gap: 30px;
 }
@@ -204,8 +205,47 @@ body {
 .films__sort {
   margin-top: 30px;
 }
+.films__close {
+  margin-top: 30px;
+  display: flex;
+  column-gap: 7px;
+  align-items: center;
+  cursor: pointer;
+}
+.films__close:hover {
+  transform: translateY(-3px);
+  transition: 0.3s;
+}
+.films__close > span {
+  font-size: 25px;
+  margin-top: 5px;
+}
+.films__filter2 {
+  display: flex;
+  align-items: center;
+  column-gap: 30px;
+  margin-top: 30px;
+}
+.films__item {
+  background: #312b45 !important;
+  color: white !important;
+  border: none !important;
+  padding: 12px 25px;
+  min-width: 100px;
+  border-radius: 20px !important;
+  cursor: pointer;
+}
+.films__item:active {
+  background: #252035;
+  color: #676471;
+}
+.films__item:hover {
+  transition: 0.3s;
+  color: #312b45 !important;
+  background: white !important;
+}
 .films__filter {
-  padding: 20px;
+  padding: 30px;
   background: #1f1b2e;
   border-radius: 8px;
   margin: 30px 0;
@@ -213,13 +253,17 @@ body {
 .films__filter-sort {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 20px;
 }
 .films__filter-box {
   background: #312b45 !important;
   color: white !important;
   border: none !important;
   border-radius: 6px !important;
+}
+.films__filter-box:hover {
+  transform: translateY(-3px);
+  transition: 0.3s;
 }
 .films__filter-item {
   background: #1f1b2e !important;
@@ -230,6 +274,12 @@ body {
 }
 .films__skeleton {
   width: calc(16.66666% - 25px);
+}
+.films__skeleton-box {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 .films__select {
   color: black;
