--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -146,12 +146,19 @@ body {
   transition: 1s;
   bottom: 0;
 }
+.film-list__card-time {
+  margin-top: 3px;
+}
+.film-list__card-rate {
+  margin-bottom: 7px;
+  font-size: 22px;
+}
 .film-list__card-info {
   width: 100%;
   height: 100%;
   flex-direction: column;
   justify-content: flex-end;
-  padding: 30px;
+  padding: 20px 25px;
   position: absolute;
   border-radius: 15px;
   bottom: -100%;
@@ -235,9 +242,14 @@ body {
   border-radius: 20px !important;
   cursor: pointer;
 }
-.films__item:active {
-  background: #252035;
-  color: #676471;
+.films__item_active {
+  border: none !important;
+  padding: 12px 25px;
+  min-width: 100px;
+  border-radius: 20px !important;
+  cursor: pointer;
+  background: #252035 !important;
+  color: #676471 !important;
 }
 .films__item:hover {
   transition: 0.3s;
