--- a/src/styles/film-list.scss
+++ b/src/styles/film-list.scss
@@ -29,13 +29,22 @@
         transition: 1s;
       }
 
+
     }
+    &-time{
+      margin-top: 3px;
+    }
+    &-rate{
+      margin-bottom: 7px;
+      font-size: 22px;
+    }
+
     &-info {
       width: 100%;
       height: 100%;
       flex-direction: column;
       justify-content: flex-end;
-      padding: 30px;
+      padding: 20px 25px;
       position: absolute;
       border-radius: 15px;
       bottom: -100%;
