change admin-panel and add SeriesSort

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -444,6 +444,7 @@ body {
   border-collapse: collapse;
 }
 .admin__table-title {
+  min-width: 80px;
   border: 2px solid #ea0057;
   border-radius: 8px;
   height: 40px;
@@ -453,6 +454,12 @@ body {
   border-radius: 8px;
   text-align: center;
   height: 40px;
+}
+.admin__table-input {
+  text-align: center;
+  color: black;
+  border-radius: 8px;
+  padding: 5px 7px;
 }
 .admin__table-btn {
   background: transparent;
