--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -86,38 +86,95 @@ body {
 }
 
 .slider {
-  padding: 30px 30px;
   position: relative;
+  padding: 30px 0;
 }
 .slider__block {
   width: 100%;
   border-radius: 30px;
+  position: relative;
 }
 .slider__block-img {
   width: 100%;
+  min-width: 600px;
   height: 500px;
   border-radius: 30px;
   object-fit: cover;
 }
+.slider__title {
+  position: absolute;
+  bottom: 90px;
+  font-weight: 700;
+  font-size: 22px;
+  text-shadow: 0 0.75px 0 rgba(0, 0, 0, 0.2);
+  left: 40px;
+  line-height: 26px;
+}
+.slider__descr {
+  position: absolute;
+  bottom: 40px;
+  left: 40px;
+  font-weight: 600;
+  font-size: 20px;
+  display: flex;
+  column-gap: 15px;
+  align-items: center;
+}
+.slider__rating {
+  flex-shrink: 0;
+  font-weight: 400;
+  background-color: hsla(258, 4%, 55%, 0.32);
+  border-radius: 5px;
+  padding: 5px 10px;
+}
 
 .slider .swiper-button-prev:after {
-  color: #a5a1b2;
+  position: absolute;
+  left: 80%;
+  top: -50%;
+  padding: 27px 22px;
+  font-size: 20px;
+  color: #ffffff;
+  backdrop-filter: blur(13px);
+  transition: 0.2s;
+  background: hsla(258, 4%, 55%, 0.32);
+  border-radius: 10px;
 }
 
 .slider .swiper-button-prev:hover::after {
-  color: #ffffff;
+  backdrop-filter: blur(13px);
+  background: hsla(258, 4%, 55%, 0.32);
+  transition: 0.2s;
+  border-radius: 10px;
+  transform: scale(120%);
 }
 
 .slider .swiper-button-next:after {
-  color: #a5a1b2;
+  position: absolute;
+  right: 100%;
+  top: -50%;
+  color: #ffffff;
+  padding: 27px 22px;
+  font-size: 20px;
+  backdrop-filter: blur(13px);
+  transition: 0.2s;
+  background: hsla(258, 4%, 55%, 0.32);
+  border-radius: 10px;
 }
 
 .slider .swiper-button-next:hover::after {
-  color: #ffffff;
+  backdrop-filter: blur(13px);
+  background: hsla(258, 4%, 55%, 0.32);
+  transform: scale(120%);
+  transition: 0.2s;
+  border-radius: 10px;
 }
 
 .film-list {
   padding-bottom: 40px;
+}
+.film-list__container {
+  padding: 0 0 0 30px;
 }
 .film-list__title {
   margin-bottom: 30px;
@@ -195,6 +252,48 @@ body {
 
 .swiper {
   padding: 40px 40px;
+}
+
+.film-list .swiper-button-prev:after {
+  position: absolute;
+  left: 100%;
+  top: -53%;
+  padding: 27px 22px;
+  font-size: 20px;
+  color: #ffffff;
+  backdrop-filter: blur(13px);
+  transition: 0.2s;
+  background: hsla(258, 4%, 55%, 0.32);
+  border-radius: 10px;
+}
+
+.film-list .swiper-button-prev:hover::after {
+  backdrop-filter: blur(13px);
+  background: hsla(258, 4%, 55%, 0.32);
+  transition: 0.2s;
+  border-radius: 10px;
+  transform: scale(120%);
+}
+
+.film-list .swiper-button-next:after {
+  position: absolute;
+  right: 250%;
+  top: -53%;
+  color: #ffffff;
+  padding: 27px 22px;
+  font-size: 20px;
+  backdrop-filter: blur(13px);
+  transition: 0.2s;
+  background: hsla(258, 4%, 55%, 0.32);
+  border-radius: 10px;
+}
+
+.film-list .swiper-button-next:hover::after {
+  backdrop-filter: blur(13px);
+  background: hsla(258, 4%, 55%, 0.32);
+  transform: scale(120%);
+  transition: 0.2s;
+  border-radius: 10px;
 }
 
 .films {
