--- a/src/styles/film-list.scss
+++ b/src/styles/film-list.scss
@@ -1,5 +1,8 @@
 .film-list {
   padding-bottom: 40px;
+  &__container{
+    padding: 0 0 0 30px;
+  }
   &__title{
     margin-bottom: 30px;
   }
@@ -85,4 +88,55 @@
 
 .swiper {
   padding: 40px 40px;
+}
+
+.film-list .swiper-button-prev:after {
+  position: absolute;
+  left: 100%;
+  top: -53%;
+
+
+  padding: 27px 22px;
+  font-size: 20px;
+
+  color: #ffffff;
+  backdrop-filter: blur(13px);
+  transition: .2s;
+  background: hsla(258,4%,55%,.32);
+
+  border-radius: 10px
+}
+
+.film-list .swiper-button-prev:hover::after {
+  backdrop-filter: blur(13px);
+  background: hsla(258,4%,55%,.32);
+
+  transition: .2s;
+  border-radius: 10px;
+
+  transform: scale(120%)
+}
+
+.film-list .swiper-button-next:after {
+  position: absolute;
+  right: 250%;
+  top: -53%;
+
+  color:#ffffff;
+  padding: 27px 22px;
+
+  font-size: 20px;
+
+  backdrop-filter: blur(13px);
+  transition: .2s;
+  background: hsla(258,4%,55%,.32);
+  border-radius: 10px
+}
+
+.film-list .swiper-button-next:hover::after {
+  backdrop-filter: blur(13px);
+  background: hsla(258,4%,55%,.32);
+  transform: scale(120%);
+  transition: .2s;
+  border-radius: 10px
 }
