--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -1,34 +1,96 @@
 .slider {
-  padding: 30px 30px;
-  position: relative;
+  position: relative; padding: 30px 0;
   &__block {
     width: 100%;
     border-radius: 30px;
-
+    position: relative;
     &-img {
       width: 100%;
+      min-width: 600px;
       height: 500px;
       border-radius: 30px;
       object-fit: cover;
     }
   }
+  &__title{
+    position: absolute;
+    bottom: 90px;
+    font-weight: 700;
+    font-size: 22px;
+    text-shadow: 0 0.75px 0 rgba(0,0,0,.2);
+    left: 40px;
+    line-height: 26px;
+  }
+  &__descr{
+      position: absolute;
+      bottom: 40px;
+      left: 40px;
+      font-weight: 600;
+      font-size: 20px;
+
+      display: flex;
+      column-gap: 15px;
+      align-items: center;
+  }
+  &__rating{
+    flex-shrink: 0;
+    font-weight: 400;
+    background-color: hsla(258,4%,55%,.32);
+    border-radius: 5px;
+    padding: 5px 10px;
+  }
 
 }
 
-
-
 .slider .swiper-button-prev:after {
-  color: #a5a1b2;
+  position: absolute;
+  left: 80%;
+  top: -50%;
+
+
+  padding: 27px 22px;
+  font-size: 20px;
+
+  color: #ffffff;
+  backdrop-filter: blur(13px);
+  transition: .2s;
+  background: hsla(258,4%,55%,.32);
+
+  border-radius: 10px
 }
 
 .slider .swiper-button-prev:hover::after {
-  color: #ffffff;
+  backdrop-filter: blur(13px);
+  background: hsla(258,4%,55%,.32);
+
+  transition: .2s;
+  border-radius: 10px;
+
+  transform: scale(120%)
 }
 
+
+
 .slider .swiper-button-next:after {
-  color: #a5a1b2;
+  position: absolute;
+  right: 100%;
+  top: -50%;
+
+  color:#ffffff;
+  padding: 27px 22px;
+
+  font-size: 20px;
+
+  backdrop-filter: blur(13px);
+  transition: .2s;
+  background: hsla(258,4%,55%,.32);
+  border-radius: 10px
 }
 
 .slider .swiper-button-next:hover::after {
-  color: #ffffff;
+  backdrop-filter: blur(13px);
+  background: hsla(258,4%,55%,.32);
+  transform: scale(120%);
+  transition: .2s;
+  border-radius: 10px
 }
