--- a/src/styles/favorites.scss
+++ b/src/styles/favorites.scss
@@ -19,17 +19,38 @@
     flex-wrap: wrap;
     gap: 40px;
   }
+  &__trash{
+    position: absolute;
+    top: 40%;
+    right: -45px;
+    font-size: 22px;
+    opacity: 0;
+
+    transform: translateX(30px);
+    transition: .3s;
+
+    &:hover{
+      fill: #ea003d;
+    }
+  }
   &__card{
     display: flex;
     column-gap: 15px;
-    width: 260px;
+    width: 285px;
     cursor: pointer;
     &:hover{
-      & > img {
+      & > .favorites__card-info > .favorites__trash {
+        opacity: 1;
         transition: .3s;
+        transform: translateX(0);
+      }
+
+      & > img {
+        transition: .2s;
         transform: scale(1.04);
         cursor: pointer;
       }
+
       & > .favorites__card-info > .favorites__card-info-top > h4 {
         transition: .3s;
         color: white;
@@ -40,6 +61,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      position: relative;
     }
     &-img{
       width: 70px;
@@ -57,7 +79,6 @@
     }
     &-subscr{
       font-size: 14px;
-      color: red;
     }
   }
 
