--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,11 +1,19 @@
 .header {
   padding: 15px 0;
-  border-bottom: 1px solid #36353e;
+
   position: relative;
+  z-index: 10;
+  &__line{
+    width: 100%;
+    margin-top: 25px;
+    border-bottom: 1px solid #36353e;
+
+  }
   &__nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
   }
 
   &__logo {
@@ -24,12 +32,14 @@
   &__link {
     color: #a5a1b2;
     font-size: 22px;
+
+    &:hover {
+      color: #fff;
+    }
+
     &.active {
       color: #ffffff;
     }
-  }
-  &__link:hover {
-    color: #fff;
   }
   //&__item_films {
   //  &:hover {
@@ -41,10 +51,13 @@
   &__item-down {
     transition: .5s;
     display: none;
+
     max-width: 1300px;
     width: 100%;
+
     padding: 30px 20px 20px;
     background: #1f1b2e;
+
     position: absolute;
     top: 99px;
     left: 20px;
@@ -54,6 +67,7 @@
   &__right {
     display: flex;
     column-gap: 20px;
+    align-items: center;
   }
 
   &__search {
@@ -72,6 +86,76 @@
     display: flex;
     align-items: center;
     column-gap: 5px;
+    &:hover{
+      .header__profile{
+        transition: .2s;
+        transition-delay: 0.3s;
+
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(0);
+      }
+    }
+  }
+  &__avatar{
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
     cursor: pointer;
+  }
+  &__profile{
+    display: flex;
+    position: absolute;
+    top: -10px;
+    right: -1.5%;
+
+    width: 103%;
+    height: 450px;
+
+    background: #1f1b2e;
+
+    border-radius: 10px;
+    z-index: -1;
+
+    padding: 30px;
+
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    opacity: 0;
+    visibility: hidden;
+
+
+
+    & > div {
+      margin-top: 100px;
+    }
+
+    &-right {
+      width: 70%;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+      border-right: 1px solid #36353e;
+    }
+
+    &-left {
+      width: 30%;
+      padding: 20px;
+    }
+    &-link{
+      font-weight: 700;
+    }
+    &-icon{
+      font-size: 23px;
+    }
+    &-block{
+      min-height: 100px;
+      cursor: pointer;
+      padding: 20px;
+      background: #312b45;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      border-radius: 10px;
+    }
   }
 }
