--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -121,16 +121,60 @@ body {
 .header__profile > div {
   margin-top: 100px;
 }
+.header__profile-login {
+  color: #939297;
+}
 .header__profile-right {
-  width: 70%;
+  width: 40%;
+  padding: 0 30px;
+}
+.header__profile-right-title {
+  font-weight: 700;
+  font-size: 35px;
+}
+.header__profile-right-email {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 7px;
+}
+.header__profile-right-emails {
+  display: flex;
+  align-items: center;
+  column-gap: 25px;
+  margin: 35px 0 45px;
+}
+.header__profile-right-info {
+  display: flex;
+  flex-direction: column;
+  row-gap: 7px;
+}
+.header__profile-right-text {
+  color: #939297;
+}
+.header__profile-right-text:hover {
+  color: white;
+  cursor: pointer;
+}
+.header__profile-new {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 49px;
+  height: 49px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 40px;
+  background: #312b45;
+}
+.header__profile-left {
+  width: 60%;
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
   border-right: 1px solid #36353e;
-}
-.header__profile-left {
-  width: 30%;
-  padding: 20px;
 }
 .header__profile-link {
   font-weight: 700;
