--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -128,18 +128,64 @@
     & > div {
       margin-top: 100px;
     }
+    &-login{
+      color:#939297;
+    }
 
     &-right {
-      width: 70%;
+      width: 40%;
+      padding: 0 30px;
+      &-title{
+        font-weight: 700;
+        font-size: 35px;
+      }
+      &-email{
+        width: 50px;
+        height: 50px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 7px;
+      }
+      &-emails{
+        display: flex;
+        align-items: center;
+        column-gap: 25px;
+        margin: 35px 0 45px;
+      }
+      &-info{
+        display: flex;
+        flex-direction: column;
+        row-gap: 7px;
+      }
+      &-text{
+        color:#939297;
+        &:hover{
+          color: white;
+          cursor: pointer;
+        }
+      }
+    }
+    &-new{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      width: 49px;
+      height: 49px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 40px;
+
+      background: #312b45;
+    }
+
+    &-left {
+      width: 60%;
       display: flex;
       flex-wrap: wrap;
       gap: 30px;
       border-right: 1px solid #36353e;
-    }
-
-    &-left {
-      width: 30%;
-      padding: 20px;
     }
     &-link{
       font-weight: 700;
