--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -85,10 +85,14 @@ body {
   font-size: 17px;
   font-weight: 400;
 }
-.header__auth {
+.header__auth-block {
   display: flex;
   align-items: center;
+  justify-content: center;
   column-gap: 5px;
+  flex-direction: column;
+  row-gap: 10px;
+  padding: 70px 0;
 }
 .header__auth:hover .header__profile {
   transition: 0.2s;
@@ -96,6 +100,16 @@ body {
   opacity: 1;
   visibility: visible;
   transform: translateY(0);
+}
+.header__auth-btn {
+  width: 100%;
+  padding: 15px 20px;
+  font-weight: 700;
+  background: #ea003d;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 .header__avatar {
   width: 50px;
@@ -191,6 +205,24 @@ body {
   flex-direction: column;
   justify-content: space-between;
   border-radius: 10px;
+}
+.header__noUser {
+  display: flex;
+  align-items: center;
+  column-gap: 8px;
+  border-radius: 5px;
+  background: #1f1b2e;
+  cursor: pointer;
+  padding: 5px 14px 5px 5px;
+}
+.header__noUser-img {
+  width: 35px;
+  height: 35px;
+  border-radius: 5px;
+}
+.header__noUser-text {
+  font-size: 13px;
+  font-weight: 700;
 }
 
 .slider {
@@ -737,6 +769,19 @@ body {
   column-gap: 8px;
   margin-bottom: 17px;
 }
+.favorites__empty {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  margin: 20px 0 50px;
+}
+.favorites__empty-icon {
+  font-size: 50px;
+  margin: 40px;
+  fill: #939297;
+}
 .favorites__text {
   color: #939297;
 }
@@ -804,6 +849,51 @@ body {
 }
 .favorites__card-subscr {
   font-size: 14px;
+}
+
+.rating {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(8, 6, 15, 0.93);
+  z-index: 1000;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.rating__content {
+  display: flex;
+  flex-direction: column;
+}
+.rating__icon {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  font-size: 40px;
+  cursor: pointer;
+}
+.rating__icon:hover {
+  transform: translateY(-2px);
+}
+.rating__title {
+  font-size: 50px;
+  font-weight: 800;
+}
+.rating__text {
+  color: #939297;
+  margin: 15px 0 25px;
+}
+.rating__btn {
+  font-size: 17px;
+  font-weight: 700;
+  background-color: #ea003d;
+  border-radius: 8px;
+  padding: 15px 20px;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=App.css.map */
