--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -83,9 +83,15 @@
   }
 
   &__auth {
-    display: flex;
-    align-items: center;
-    column-gap: 5px;
+    &-block{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      column-gap: 5px;
+      flex-direction: column;
+      row-gap: 10px;
+      padding: 70px 0;
+    }
     &:hover{
       .header__profile{
         transition: .2s;
@@ -95,6 +101,18 @@
         visibility: visible;
         transform: translateY(0);
       }
+    }
+    &-btn{
+      width: 100%;
+      padding: 15px 20px;
+
+      font-weight: 700;
+      background: #ea003d;
+      border-radius: 8px;
+
+      border: none;
+      outline: none;
+      cursor: pointer;
     }
   }
   &__avatar{
@@ -204,4 +222,28 @@
       border-radius: 10px;
     }
   }
+  &__noUser{
+    display: flex;
+    align-items: center;
+    column-gap: 8px;
+
+    border-radius: 5px;
+
+
+    background: #1f1b2e;
+
+    cursor: pointer;
+
+    padding: 5px 14px 5px 5px;
+    &-img{
+      width: 35px;
+      height: 35px;
+      border-radius: 5px;
+    }
+    &-text{
+      font-size: 13px;
+      font-weight: 700;
+    }
+  }
+
 }
